Fix black flickering on slow network

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -87,7 +87,7 @@ $sideborder-margin: 6px;
 }
 
 :root {
-  color-scheme: dark;
+  background-color: #f5f5f5;
 }
 
 .noselect {
